# LLM-RAG-private-knowledge-worker

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
config/: config.json  config.yaml
data/: README.md
data/documents/: sample_rag_intro.txt  sample_vector_db.txt
data/processed/repo_summaries/: AI-in-Production-Healthcare-App.md  Brain-Tumor-Classification.md  Breast-Cancer-Segmentation.md  Clustering-KMeans-AHC.md  DL-CNN-Transfer-Learning.md  DS-Sleep-Disorder-analysis.md  Dataset.md  Desktop-Chat-App.md  Face-Differentiator.md  Feature-Selection-and-Dimensionality-Reduction.md  LLM-AI-Company-Brochure-Generator.md  LLM-AI-Website-Summarizer.md  LLM-Code-Explainer.md  LLM-Debate-Competition.md  LLM-Meeting-Minutes-Generation.md  LLM-RAG-private-knowldge-worker.md  Linear-regressing--Ridge-Lasso.md  ML-Ensemble.md  ML-flow-exp.md  MLOps-CD-Docker.md  MLOps-CI.md  MLOps-DVC-Data-Versioning.md  MLOps-Insurance-Project.md  MLops-Complete-Pipeline.md  NN-Backpropagation.md  Non-linear-dimensionality-reduction.md  OOPS-Python-MLOps.md  OpenCV-Basics.md  Predicting-House-price-in-Bangalore-city-.md  UMA-V-2.md  UMA_dropout_prediction_for_students.md  chem_sim.md  compare-knn-dt-randomforest.md  gaussian-mle.md  iris-softmax-vs-svm.md  llm_engineering.md  prathamesh-portfolio-static.md  production.md  supervised-ml-feature-experiments.md  upratham.md
docs/: API_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  README.md
examples/: basic_usage.py  build_kb.py  query_kb.py
notebooks/: advanced_rag_pipeline.ipynb  data_ingestion.ipynb  embedder_pipeline.ipynb  github_fetch_repo.ipynb  pdf_to_markdown.ipynb  quickstart.ipynb
src/: RAG_pipeline.py  __init__.py  main.py  pdf_converter.py  rag_system.py  retriever.py
src/github_docs/: github_docs_generator.py
src/rag/utils/: config.py
src/rag_llm/: __init__.py
src/rag_llm/embeddings/: __init__.py  embedding_model.py  vector_store.py
src/rag_llm/ingestion/: __init__.py  document_loader.py  text_splitter.py
src/rag_llm/llm/: __init__.py  llm_client.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_embeddings.py  test_ingestion.py
(+50 files in other folders)
