[project]
name = "LLM-RAG-Private-Knowledge-worker"
version = "0.0.1"
description = "AI assistant for personal use"
authors = [{name = "Prathamesh Uravane", email = "upratham2002@gmail.com"}]
requires-python = "==3.11.*"
dependencies = [
    "anthropic>=0.79.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.0",
    "datasets==3.6.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "gradio>=6.4.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "ipywidgets>=8.1.8",
    "jupyter-dash>=0.4.2",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.3",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "plotly>=6.5.2",
    "protobuf==3.20.2",
    "psutil>=7.2.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.2",
    "setuptools>=82.0.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
]
[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
